# world-of-bsky

./: notes.txt
api/: go.mod
api/cmd/: main.go
api/internal/: buf.go
ingest/: examples.txt  ingest.py  ingest_queue.py  locate.py  location-llama.Modelfile  main.py  pyproject.toml  request_limiter.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  GlobeComponent.tsx  ImageProvider.ts  OrbitPicker.tsx  d3-geo-projection.d.ts  debug.tsx  schema.ts
